fixed alignment issues with collection table

--- a/src/components/GameList/styles.css
+++ b/src/components/GameList/styles.css
@@ -2,3 +2,6 @@
     width: 100px;
 }
 
+.table td{
+    vertical-align: middle;
+}
